# mrdu

./: Cargo.toml  README.md
.github/workflows/: rust_actions.yml
src/: lib.rs  main.rs  methods.rs
src/struct_define/: analysis_item.rs  config.rs  display_info.rs  file_info.rs  mod.rs
test/: test.rs
tests/: test_analyse.rs
tests/test_file/test_dir_/: long_dir_name_what_a_very_long_dir_name_what_happens_when_this_goes_over_80_characters_i_wonder.txt  test_file.c
tests/test_file/test_dir_d2/test_dir_d3/: test_file_d3.c
tests/test_file/test_dir_d2/test_dir_d3/test_dir_d4/: test_file_d4.txt
tests/test_file/test_dir_hidden_file/: .test_file
